k8s/overlays/dev/worker-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurea-celery-worker
  namespace: aurea-orchestrator
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: worker
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        args:
        - "-A"
        - "app.celery"
        - "worker"
        - "--loglevel=debug"
        - "--concurrency=2"
